Fixed labels and tiers crammed in recipient select dropdown
closes https://github.com/TryGhost/Team/issues/983

- fixes overlap of labels and tiers when there are a lot of labels in the recipient select dropdown of publishing menu.

--- a/ghost/admin/app/styles/components/power-select.css
+++ b/ghost/admin/app/styles/components/power-select.css
@@ -250,6 +250,11 @@
     max-height: 172px; /* 5.5 options */
 }
 
+/* Recipient Token input with groups */
+.gh-token-input.select-members-recipient .ember-power-select-options[role="group"] {
+    max-height: unset;
+}
+
 .ember-power-select-options[role="listbox"] {
     overflow-x: hidden;
 }
